--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@frontity/tiny-router": "^1.3.2",
     "@frontity/wp-source": "^1.11.1",
     "frontity": "^1.14.1",
+    "my-first-theme": "file:packages/my-first-theme",
     "react-spring": "^8.0.27"
   }
 }
