--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
+    "start": "frontity serve --port $PORT",
     "dev": "frontity dev",
     "build": "frontity build",
     "serve": "frontity serve"
@@ -19,9 +20,9 @@
   "dependencies": {
     "@frontity/core": "^1.10.1",
     "@frontity/html2react": "^1.6.1",
-    "@frontity/mars-theme": "./packages/mars-theme",
     "@frontity/tiny-router": "^1.3.2",
     "@frontity/wp-source": "^1.11.1",
+    "dayjs": "^1.10.4",
     "frontity": "^1.14.1",
     "my-first-theme": "file:packages/my-first-theme",
     "react-spring": "^8.0.27"
